--- a/style.css
+++ b/style.css
@@ -1,17 +1,26 @@
 body{
 	padding-top: 20px;
 	font-family: 'Trirong', serif;
+    color:#fff;
+    font-size: 20px;
 }
 button{
 	background-color: #f89d8a;
     border: none;
     color: white;
     border-radius: 8px;
-    padding: 10px 25px;
+    padding: 10px 15px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     margin-right: 10px;
+    margin-top: -30px;
+}
+body {
+    background-image: url("http://cdn.wallpapersafari.com/42/12/hEodYC.jpg");
+    background-repeat: no-repeat;
+    background-color: #000;
+    background-position: fixed;
 }
